--- a/Automate.ipynb
+++ b/Automate.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Step 1: Building Connection\n",
     "import fxcmpy\n",
-    "API = \"4671bda2f36df902b4d13ac5f59e361eab8f6280\"\n",
+    "API = \"\"\n",
     "con = fxcmpy.fxcmpy(access_token = API,log_level = \"error\", server = \"demo\", log_file='log.txt')\n",
     "\n",
     "# Step 2: Defining Parameters\n",
